# dual_pure_pursuit

dual_pure_pursuit_planner/: CMakeLists.txt  package.xml
dual_pure_pursuit_planner/config/param/: cocobot.yaml  dual_pure_pursuit_planner_debug.yaml  no_steer.yaml
dual_pure_pursuit_planner/config/rviz/: cocobot.rviz  debug.rviz
dual_pure_pursuit_planner/include/dual_pure_pursuit_planner/: dual_pure_pursuit_planner.h
dual_pure_pursuit_planner/launch/: cocobot.launch  debug.launch  debug2.launch  wait_and_go.launch
dual_pure_pursuit_planner/old2/: damedatta.cpp  damedatta.h
dual_pure_pursuit_planner/src/: dual_pure_pursuit_planner.cpp  dual_pure_pursuit_planner_node.cpp
old/: umakuikanakatta.cpp  umakuikanakatta.h
